--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  intl: 
+  intl:
   provider: ^3.2.0
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fonts/
+    - assets/img/
 
   fonts:
       - family: PoetsenOne
